# DevAssist-MCP-Server

./: .env.example  .gitignore  Dockerfile  README.md  claude_desktop_config.json.example  claude_desktop_config_local.json.example  config.py  pyproject.toml  requirements.txt  server.py
models/: __init__.py  cp_models.py  github_models.py
services/: __init__.py  codeforces_service.py  github_service.py
tests/: __init__.py  conftest.py  test_codeforces_service.py  test_cp_tool.py  test_github_service.py  test_github_tool.py
tools/: __init__.py  cp.py  github.py
utils/: __init__.py  exceptions.py  logger.py
